--- a/.github/workflows/migrate.yml
+++ b/.github/workflows/migrate.yml
@@ -10,6 +10,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: prepare
+        uses: actions/setup-go@v2
+        with:
+          go-version: "1.21.0"
+
       - name: migrate
         run:
+          go version
           go run utils/migrate.go
