--- a/.github/workflows/migrate.yml
+++ b/.github/workflows/migrate.yml
@@ -18,4 +18,4 @@ jobs:
       - name: migrate
         run: |
           go version
-          go run utils/migrate.go "first_arg"
+          @go run utils/migrate.go ${{ secrets.PROD_DB_PASSWORD }}
