--- a/.github/workflows/migrate.yml
+++ b/.github/workflows/migrate.yml
@@ -18,6 +18,5 @@ jobs:
       - name: migrate
         run: |
           go version
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
           go run utils/migrate.go
-        env:
-          DB_PASSWORD: ${{ env.DB_PASSWORD }}
