--- a/.github/workflows/migrate.yml
+++ b/.github/workflows/migrate.yml
@@ -18,4 +18,4 @@ jobs:
       - name: migrate
         run: |
           go version
-          DB_PASSWORD=${{ secrets.DB_PASSWORD }} go run utils/migrate.go
+          DB_PASSWORD=${{ env.DB_PASSWORD }} go run utils/migrate.go
