--- a/.github/workflows/migrate.yml
+++ b/.github/workflows/migrate.yml
@@ -15,9 +15,7 @@ jobs:
         with:
           go-version: "1.21.0"
 
-      - name: migrate
+      - name: build
         run: |
-          go version
-          DB_PASSWORD=${{ env.DB_PASSWORD }} go run utils/migrate.go
-        env:
-          DB_PASSWORD: ${{ env.DB_PASSWORD }}
+          make build
+
